--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </nav>
 
 </header>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><center>
+<div class="Text">
+<center>
 <h2>Hey this is Yash Singh, Nice to meet you</h2><br><br>
     <h4>This my Resume displayed via a website disgned by me,<br><br>
 
 My objective is to work in a environment where I can utilize my skills and knowledge to the best of my abilities and contribute towards the growth of the organization.
-</center></h4>
+</center></h4></div>
 </body>
 </html>
