--- a/Skills.html
+++ b/Skills.html
@@ -51,9 +51,8 @@
 </div><br>
 
 <footer>
-  My Contact details -
-  <a href="mailto:yashssingh15@gmail.com">yashssingh15@gmail.com</a>
-</footer>
+        <p>Conatact Details: <a href="https://wa.me/7666243266">+91 7666243266</a> / <a href="mailto:yashssingh15@gmail.com">yashssingh15@gmail.com</a></p>
+      </footer>
 
 </body>
 </html>
