--- a/Experience.html
+++ b/Experience.html
@@ -34,8 +34,7 @@
     <li>Assisting implementing and adherence to compliances and disclosure under SEBI Prohibition of Insider Trading Regulation and SBEB (Employee StockOption Scheme) Regulations.</li>
 </ul></center>
 <footer>
-    My Contact details -
-    <a href="mailto:yashssingh15@gmail.com">yashssingh15@gmail.com</a>
-  </footer>
+        <p>Conatact Details: <a href="https://wa.me/7666243266">+91 7666243266</a> / <a href="mailto:yashssingh15@gmail.com">yashssingh15@gmail.com</a></p>
+      </footer>
 </body>
 </html>
