--- a/Education.html
+++ b/Education.html
@@ -32,8 +32,7 @@
       <h4>Hindi High School (English Medium) - Secondary School Certificate</h4><br>
       81.40%<br><br></center>
       <footer>
-        My Contact details -
-        <a href="mailto:yashssingh15@gmail.com">yashssingh15@gmail.com</a>
+        <p>Conatact Details: <a href="https://wa.me/7666243266">+91 7666243266</a> / <a href="mailto:yashssingh15@gmail.com">yashssingh15@gmail.com</a></p>
       </footer>
 </body>
 </html>
