--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav></header>
         
 <div class="Text">
-<h1>Hey this is Yash Singh, Nice to meet you</h1><br><br>
+<h1>Hello, Nice to meet you</h1><br><br>
     <h3>This my Resume displayed via a website disgned by me,</h3><br><br>
     <h2>I am a 
     <span id="element"></span></h2><br>
