--- a/Experience.html
+++ b/Experience.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html" class="logo">Yash Singh</a>
+        <a href="index.html" class="logo">Home</a>
         
         <nav class="navbar">
             <a href="Experience.html">Experience</a>
