--- a/Education.html
+++ b/Education.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="2.css">
-    <title>Document</title>
+    <title>Education</title>
 </head>
 <body>
     <header class="header">
