--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
 <div class="Text">
 <h1>Hello, Nice to meet you</h1><br><br>
-    <h3>This my Resume displayed via a website disgned by me,</h3><br><br>
+    <h3>This is my Resume displayed via a website designed/developed by me,</h3><br><br>
     <h2>I am a 
     <span id="element"></span></h2><br>
 
